tests/ui/traits/next-solver/diagnostics/const-host-effect-hrtb-no-ice.stderr
error[E0277]: expected a `Fn(&'a ())` closure, found `()`
  --> $DIR/const-host-effect-hrtb-no-ice.rs:8:21
   |
LL |     with_positive::<()>();
   |                     ^^ expected an `Fn(&'a ())` closure, found `()`
   |
   = help: the trait `for<'a> Fn(&'a ())` is not implemented for `()`
note: required by a bound in `with_positive`
  --> $DIR/const-host-effect-hrtb-no-ice.rs:5:27
   |
LL | const fn with_positive<F: for<'a> [const] Fn(&'a ())>() {}
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `with_positive`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
